--- a/Markov.ipynb
+++ b/Markov.ipynb
@@ -44,12 +44,13 @@
     "    A value of <Delta_Q> = 1 is expected for a Markov process.\n",
     "    \"\"\"\n",
     "    \n",
+    "    X=(X-np.mean(X))/np.std(X)\n",
     "    disc = np.digitize(X, np.linspace(np.min(X), np.max(X), nbin))\n",
-    "    mean_u = np.mean(disc)\n",
+    "    disc=disc-round(np.mean(disc))\n",
     "    std_u = np.std(disc)\n",
     "    N = len(X)\n",
     "    M = N - 2 * max(lags)\n",
-    "    if M <= 0:\n",
+    "    if M <= 500:\n",
     "        raise ValueError('******** ERROR: Insufficient number of datapoints *********')\n",
     "    v1 = disc[:M]\n",
     "    O = 0\n",
@@ -58,6 +59,7 @@
     "    for tau in lags:\n",
     "        v2 = disc[tau:M + tau]\n",
     "        v3 = disc[2 * tau:M + 2 * tau]\n",
+    "        cond2 = np.where(np.abs(v3) < std_u / 8)[0]\n",
     "\n",
     "        Delta_Q = []\n",
     "        for V in np.unique(v2):\n",
@@ -67,7 +69,6 @@
     "            if len(cond1) > 25:\n",
     "                xx = np.sort(v1[cond1]) \n",
     "                n = len(xx)\n",
-    "                cond2 = np.where(np.abs(v3 - mean_u) < std_u / 8)[0]\n",
     "                cond = np.intersect1d(cond1, cond2)\n",
     "                # Only proceed if there are enough points in the intersection\n",
     "                if len(cond) > 25:\n",
